--- a/index.html
+++ b/index.html
@@ -9,7 +9,37 @@
 </head>
 <body>
     
-    
+    <header>
+        <h1>jogo da Velha</h1>
+    </header>
+    <main>
+        <div class="container-jogo">
+            <div id="1">
+                <div class="qd-velha">-</div>
+                <div class="qd-velha">-</div>
+                <div class="qd-velha">-</div>
+            </div>
+            <div id="2">
+                <div class="qd-velha">-</div>
+                <div class="qd-velha">-</div>
+                <div class="qd-velha">-</div>
+            </div>
+            <div id="3">
+                <div class="qd-velha">-</div>
+                <div class="qd-velha">-</div>
+                <div class="qd-velha">-</div>
+            </div>
+        </div>
+        <div class="vez-jogar">
+            <p> jogador: 0</p>
+        </div>
+        <div class="vencedor">
+            <p>vencedor</p>
+        </div> 
+        <div class="btn">
+            <button>Iniciar</button> 
+        </div> 
+    </main>
 
     <script src="js/main.js"></script>
 </body>
