--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="vez-jogar">
-            <p> jogador: 0</p>
+            <p> jogador: </p>
         </div>
         <div class="vencedor">
             <p>vencedor</p>
