--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
         <div class="vez-jogar">
             <p> jogador: </p>
         </div>
+        
         <div class="vencedor">
-            <p>vencedor</p>
-        </div> 
-        <div class="btn">
-            <button>Iniciar</button> 
-        </div> 
+            <div class="info-resultado">
+                <div class="resultado">
+                    <p> X Venceu</p>
+                </div>
+                <div class="btn">
+                    <button>Reiniciar</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="js/main.js"></script>
